--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,8 @@ spring:
     active: dev
   main:
     allow-bean-definition-overriding: true
+#  thymeleaf:
+#    prefix: classpath:/static/
 
 mybatis-plus:
   global-config:
@@ -23,4 +25,5 @@ audience:
   # JWT的签发主体，存入issuer
   name: restapiuser
   # 过期时间，时间戳
-  expiresSecond: 216000
+  expiresSecond: 2160000
+
