--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -7,7 +7,23 @@ spring:
     password: root
     url: jdbc:mysql://127.0.0.1:3306/shiro_demo?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
+  # redis缓存设置
+  redis:
+    host: 192.168.170.22
+    database: 0
+    port: 6379
+    password: root
+    timeout: 0  # 连接超时时间（毫秒）
+    jedis:
+      pool:
+        max-active: 8  # 连接池最大连接数（使用负值表示没有限制）
+        max-idle: 0    # 连接池中的最大空闲连接
+        max-wait: -1   # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        min-idle: 0    # 连接池中的最小空闲连接
+
+
 
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
