--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,8 @@ spring:
     active: dev
   main:
     allow-bean-definition-overriding: true
+  mvc:
+    static-path-pattern: /static/**
 #  thymeleaf:
 #    prefix: classpath:/static/
 
@@ -23,7 +25,7 @@ audience:
   # 密钥, 经过Base64加密, 可自行替换
   base64Secret: MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
   # JWT的签发主体，存入issuer
-  name: restapiuser
+  name: PONKING
   # 过期时间，时间戳
-  expiresSecond: 2160000
+  expiresSecond: 1800
 
